# apertium-fin-gle

./: .gitattributes  Makefile.am  README  apertium-fin-gle.fin-gle.dix  configure.ac  modes.xml
test/: fin-gle-biltrans-expected.txt  fin-gle-chunker-expected.txt  fin-gle-disam-expected.txt  fin-gle-generator-expected.txt  fin-gle-input.txt  fin-gle-interchunk-expected.txt  fin-gle-morph-expected.txt  fin-gle-postchunk-expected.txt  fin-gle-pretransfer-expected.txt  gle-fin-biltrans-expected.txt  gle-fin-chunker-expected.txt  gle-fin-generator-expected.txt  gle-fin-input.txt  gle-fin-morph-expected.txt  gle-fin-postchunk-expected.txt  gle-fin-pretransfer-expected.txt  tests.json
texts/: tarina.gle.txt
